--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
           </p>
 
           <p class="mb-3 sm:text-lg">
-            I care about UX/UI, SEO and performance but I have a lot to grasp.
-            Currently learning from the Refactoring UI book and the Tailwind CSS
-            framework. I have also used Bootstrap and Semantic UI.
+            I care about UX/UI, SEO and performance. Currently learning from the
+            Refactoring UI book and the Tailwind CSS framework. I have also used
+            Bootstrap and Semantic UI.
           </p>
 
           <p class="mb-3 sm:text-lg">
@@ -257,9 +257,9 @@
                 </p>
               </div>
               <p class="mt-2 text-lg text-gray-800 sm:mt-4">
-                Keeping records of every day expenses is a hard work. Increasing
-                amount of receips that are prone to loss or overflow any house
-                drawers. Or houndred of card transactions that don't show any
+                Keeping records of every day expenses is hard work. Increasing
+                amount of receips are prone to be lost or overflow in household
+                drawers. Also houndreds of card transactions that don't show any
                 hint of the store, product or products's category involved.
               </p>
               <p class="mt-2 text-lg text-gray-800">
@@ -349,13 +349,13 @@
               </div>
               <p class="mt-2 text-lg text-gray-800 sm:mt-4">
                 Personal website portfolio created to showcase my projects,
-                skills and to be a mean to intercat with employers, clients and
+                skills and to be a mean to interact with employers, clients and
                 developers.
               </p>
               <p class="mt-2 text-lg text-gray-800">
                 The project was designed to provide a great user experience and
-                has good performance. Therefore used techniques to optimaze its
-                assets and reduce the overall loading time.
+                have good performance. Therefore I used techniques to optimaze
+                its assets and reduce the overall loading time.
               </p>
               <p class="mt-2 text-lg text-gray-800">
                 TailwindCSS was a tool very usefull to follow a design system
@@ -422,7 +422,7 @@
                 to get a responsive website. It includes inline javascript for
                 creating many images of diffrent sizes to fill the grid. This
                 techniques came from the Wes Bos's great course CSS Grid. Also
-                the use of images was a good intro to analizing the impact of
+                the usage of images was a good intro to analizing the impact of
                 images size, format and aspect-ratio in the page's performance.
               </p>
               <p class="mt-2 text-lg text-gray-800">
@@ -431,9 +431,8 @@
                 width and compressing them to achieve better performance.
               </p>
               <p class="mt-2 text-lg text-gray-800">
-                In detecting the images issues was very useful the Google
-                Console tool for auditing the page known as Lighthouse and
-                RespImageLint.
+                In detecting images issues Google Console Tool was very useful
+                for auditing the page known as Lighthouse and RespImageLint.
               </p>
               <!-- <p class="mt-2 text-lg text-gray-800">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -498,17 +497,17 @@
                 </p>
               </div>
               <p class="mt-2 text-lg text-gray-800 sm:mt-4">
-                This project explore basics properties of CSS Grid and how it
-                allow responsive layouts. The idea also came from the Wes Bos's
-                great course CSS Grid.
+                This project explore the basics properties of CSS Grid and how
+                it allow responsive layouts. The idea also came from the Wes
+                Bos's great course CSS Grid.
               </p>
               <p class="mt-2 text-lg text-gray-800">
-                It make possible thinking about image quality, size, format,
-                aspect ratio and how it afect the page performance and user
+                It makes it possible to think about image quality, size, format,
+                aspect-ratio and how it affect the page performance and user
                 experience.
               </p>
               <p class="mt-2 text-lg text-gray-800">
-                Also was uselful for practice the use of Gimp, imageoptim,
+                It was also uselful to practice the usage of Gimp, imageoptim,
                 Lighthouse and RespImageLint.
               </p>
               <div class="mt-4 text-sm sm:pt-6 sm:text-base sm:mt-auto">
