Changed description, keywords and title

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="personal portfolio website of a software engineer that know javascript, reactjs, graphql, aws amplify, css, html5, taildwindcss, bulma, postcss and git"
+      content="I am a Software engineer that know javascript, reactjs, graphql, sql, aws amplify, css, html5, taildwindcss, bulma, postcss and git. Searching for job, 100% remote. Hire me."
     />
-    <title>Yampier Medina personal portfolio</title>
+    <meta
+      name="keywords"
+      content="Personal Website, Portfolio, Software Engineer, Full Stack, HTML5, CSS, JavaScript, ReactJS, AWS, AWS Amplify, TailwindCSS"
+    />
+    <title>Yampier Medina personal website portfolio (software engineer)</title>
     <link rel="dns-prefetch" href="//fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
