Updated prject description

--- a/index.html
+++ b/index.html
@@ -287,7 +287,6 @@
                   href="https://www.trackingmyfinance.com"
                   >Demo</a
                 >
-                <a class="shadow-lg btn btn-gray" href="#">Info</a>
               </div>
             </div>
             <div class="flex flex-col p-2 bg-gray-200 sm:p-4">
@@ -357,16 +356,24 @@
                 developers.
               </p>
               <p class="mt-2 text-lg text-gray-800">
-                The project was designed to provide a great user experience and
-                have good performance. Therefore I used techniques to optimaze
-                its assets and reduce the overall loading time.
-              </p>
-              <p class="mt-2 text-lg text-gray-800">
                 TailwindCSS was a tool very usefull to follow a design system
                 and create a custom designed website while taking advantage of
                 its utility-first characteristict to fast prototyping and
                 update.
               </p>
+              <p class="mt-2 text-lg text-gray-800">
+                The project was designed to provide a great user experience and
+                have good performance. Gimp and imageoptim were tools that made
+                easy the process of creating the images needed to respond at
+                diferent viewport's width and compressing them to achieve better
+                performance.
+              </p>
+              <p class="mt-2 text-lg text-gray-800">
+                Lighthouse (Google Chrome Console Tool) and RespImageLint were
+                very useful to dectect images issues that afect page performance
+                and user experience.
+              </p>
+
               <div class="mt-4 text-sm sm:pt-6 sm:text-base sm:mt-auto">
                 <a class="shadow-lg btn btn-blue" href="#">Demo</a>
                 <a
@@ -424,19 +431,20 @@
               <p class="mt-2 text-lg text-gray-800 sm:mt-4">
                 This project provided a possibility to use CSS Grid while trying
                 to get a responsive website. It includes inline javascript for
-                creating many images of diffrent sizes to fill the grid. This
+                creating several images of diffrent sizes to fill the grid. This
                 techniques came from the Wes Bos's great course CSS Grid. Also
                 the usage of images was a good intro to analizing the impact of
                 images size, format and aspect-ratio in the page's performance.
               </p>
               <p class="mt-2 text-lg text-gray-800">
-                Gimp and imageoptim were tools that made easy the process of
-                creating the images needed to respond at diferent viewport's
-                width and compressing them to achieve better performance.
+                Gimp made easy the process of creating images at specified
+                dimensions. Also imageoptim allows more images's compression to
+                achieve better performance.
               </p>
               <p class="mt-2 text-lg text-gray-800">
-                In detecting images issues Google Console Tool was very useful
-                for auditing the page known as Lighthouse and RespImageLint.
+                Lighthouse (Google Chrome Console Tool) and RespImageLint were
+                very useful to dectect images issues that afect page performance
+                and user experience.
               </p>
               <!-- <p class="mt-2 text-lg text-gray-800">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
