--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
             plugged to an external Dell UltraSharp 27 4K Monitor.
           </p>
           <p class="mb-3 sm:text-lg">
-            I speak English (continuosly improving) and Spanish (native).
+            I speak English (continuously improving) and Spanish (native).
           </p>
           <p class="mb-3 sm:text-lg">
             When I am not coding I like to read. Recent readings:
           </p>
           <p class="mb-3 sm:text-lg">
-            <span class="font-medium">The choice by Edith Eva Eger</span>
+            <span class="font-medium">The Choice by Edith Eva Eger</span>
             [non-technical, completed],
             <span class="font-medium">Composing Software by Eric Elliot.</span>
             [technical, in progress],
@@ -187,7 +187,7 @@
             [technical, pending].
           </p>
           <p class="mb-3 sm:text-lg">
-            I have 9 lovely Bettas and a pasion for nature.
+            I have 9 lovely Bettas and a passion for nature.
           </p>
         </div>
       </div>
@@ -240,7 +240,7 @@
 
                   <span
                     class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
-                    >React</span
+                    >ReactJS</span
                   >
                   <span
                     class="inline-block px-2 mr-1 text-xs font-semibold tracking-wide text-gray-800 uppercase bg-gray-100 rounded-full sm:mb-1"
@@ -262,8 +262,8 @@
               </div>
               <p class="mt-2 text-lg text-gray-800 sm:mt-4">
                 Keeping records of every day expenses is hard work. Increasing
-                amount of receips are prone to be lost or overflow in household
-                drawers. Also houndreds of card transactions that don't show any
+                amount of receipts are prone to be lost or overflow in household
+                drawers. Also hundreds of card transactions that don't show any
                 hint of the store, product or products's category involved.
               </p>
               <p class="mt-2 text-lg text-gray-800">
@@ -356,21 +356,20 @@
                 developers.
               </p>
               <p class="mt-2 text-lg text-gray-800">
-                TailwindCSS was a tool very usefull to follow a design system
-                and create a custom designed website while taking advantage of
-                its utility-first characteristict to fast prototyping and
-                update.
+                TailwindCSS was a tool very useful to follow a design system and
+                create a custom designed website while taking advantage of its
+                utility-first characteristic to fast prototyping and update.
               </p>
               <p class="mt-2 text-lg text-gray-800">
                 The project was designed to provide a great user experience and
                 have good performance. Gimp and imageoptim were tools that made
                 easy the process of creating the images needed to respond at
-                diferent viewport's width and compressing them to achieve better
-                performance.
+                different viewport's width and compressing them to achieve
+                better performance.
               </p>
               <p class="mt-2 text-lg text-gray-800">
                 Lighthouse (Google Chrome Console Tool) and RespImageLint were
-                very useful to dectect images issues that afect page performance
+                very useful to detect images issues that affect page performance
                 and user experience.
               </p>
 
@@ -431,10 +430,11 @@
               <p class="mt-2 text-lg text-gray-800 sm:mt-4">
                 This project provided a possibility to use CSS Grid while trying
                 to get a responsive website. It includes inline javascript for
-                creating several images of diffrent sizes to fill the grid. This
-                techniques came from the Wes Bos's great course CSS Grid. Also
-                the usage of images was a good intro to analizing the impact of
-                images size, format and aspect-ratio in the page's performance.
+                creating several images of different sizes to fill the grid.
+                This techniques came from the Wes Bos's great course CSS Grid.
+                Also the usage of images was a good intro to analyzing the
+                impact of images size, format and aspect-ratio in the page's
+                performance.
               </p>
               <p class="mt-2 text-lg text-gray-800">
                 Gimp made easy the process of creating images at specified
@@ -443,7 +443,7 @@
               </p>
               <p class="mt-2 text-lg text-gray-800">
                 Lighthouse (Google Chrome Console Tool) and RespImageLint were
-                very useful to dectect images issues that afect page performance
+                very useful to detect images issues that affect page performance
                 and user experience.
               </p>
               <!-- <p class="mt-2 text-lg text-gray-800">
@@ -510,7 +510,7 @@
               </div>
               <p class="mt-2 text-lg text-gray-800 sm:mt-4">
                 This project explore the basics properties of CSS Grid and how
-                it allow responsive layouts. The idea also came from the Wes
+                it allows responsive layouts. The idea also came from the Wes
                 Bos's great course CSS Grid.
               </p>
               <p class="mt-2 text-lg text-gray-800">
@@ -519,7 +519,7 @@
                 experience.
               </p>
               <p class="mt-2 text-lg text-gray-800">
-                It was also uselful to practice the usage of Gimp, imageoptim,
+                It was also useful to practice the usage of Gimp, imageoptim,
                 Lighthouse and RespImageLint.
               </p>
               <div class="mt-4 text-sm sm:pt-6 sm:text-base sm:mt-auto">
