--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
 
     <link rel="stylesheet" href="build/index.css" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-172014535-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-172014535-1");
+    </script>
+
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
